# api/api.go
@@ -1,6 +1,10 @@
 package api
 
 import (
+	"errors"
+
+	"net/http"
+
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
@@ -8,12 +12,26 @@ import (
 
 	_ "app/api/docs"
 	"app/api/handler"
+	"app/config"
+	"app/pkg/helper"
 	"app/storage"
 )
 
-func NewApi(r *gin.Engine, storage storage.StorageI) {
+func NewApi( cfg *config.Config, r *gin.Engine, storage storage.StorageI) {
 
-	handlerV1 := handler.NewHandler(storage)
+	handlerV1 := handler.NewHandler(cfg,storage)
+
+	 	// @securityDefinitions.apikey ApiKeyAuth
+		// @in header
+		// @name Authorization
+	
+		v1 := r.Group("v1")
+
+	r.Use(customCORSMiddleware())
+	v1.Use(SecurityMiddleware())
+	v1.GET("/user", handlerV1.GetUserList)
+	v1.GET("/order", handlerV1.GetListOrder)
+
 
 	r.POST("/investor", handlerV1.CreateInvestor)
 	r.GET("/investor/:id", handlerV1.GetByIdInvestor)
@@ -35,7 +53,6 @@ func NewApi(r *gin.Engine, storage storage.StorageI) {
 
 	r.POST("/order", handlerV1.CreateOrder)
 	r.GET("/order/:id", handlerV1.GetByIdOrder)
-	r.GET("/order", handlerV1.GetListOrder)
 	r.DELETE("/order/:id", handlerV1.DeleteOrder)
 	r.PUT("/order/:id", handlerV1.UpdateOrder)
 	r.PATCH("/order/:id", handlerV1.UpdatePatchOrder)
@@ -52,6 +69,69 @@ func NewApi(r *gin.Engine, storage storage.StorageI) {
 	r.GET("/report/company-share", handlerV1.GetBranchShare)
 
 
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+	r.POST("/login", handlerV1.Login)
 
+	r.POST("/user", handlerV1.CreateUser)
+	r.GET("/user/:id", handlerV1.GetUserById)
+
+
+
+	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler, url))
 }
+
+func SecurityMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+  
+	  key:=config.Load().AuthSecretKey
+	 
+  
+	  if len(c.Request.Header["Authorization"]) > 0 {
+		token := c.Request.Header["Authorization"][0]
+		_, err := helper.ParseClaims(token, key)
+  
+		if err != nil {
+		  c.JSON(http.StatusUnauthorized, struct {
+			Code int
+			Err  string
+		  }{
+			Code: http.StatusUnauthorized,
+			Err:  errors.New("error access denied 2").Error(),
+		  })
+		  c.Abort()
+		  return
+		}
+	  }else {
+		c.JSON(http.StatusUnauthorized, struct {
+		  Code int
+		  Err  string
+		}{
+		  Code: http.StatusUnauthorized,
+		  Err:  errors.New("error access denied 1").Error(),
+		})
+		c.Abort()
+		return
+	  }
+  
+	  c.Next()
+	}
+  }
+  
+  func customCORSMiddleware() gin.HandlerFunc {
+  
+	return func(c *gin.Context) {
+  
+	  c.Header("Access-Control-Allow-Origin", "*")
+	  c.Header("Access-Control-Allow-Credentials", "true")
+	  c.Header("Access-Control-Allow-Methods", "POST, OPTIONS, GET, PUT, PATCH, DELETE, HEAD")
+	  c.Header("Access-Control-Allow-Headers", "Platform-Id, Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization, accept, origin, Cache-Control, X-Requested-With")
+	  c.Header("Access-Control-Max-Age", "3600")
+  
+	  if c.Request.Method == "OPTIONS" {
+		c.AbortWithStatus(204)
+		return
+	  }
+  
+	  c.Next()
+	}
+  }
