# models/auth.go
@@ -1,0 +1,10 @@
+package models
+
+type Login struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	AccessToken string `json:"access_token"`
+}
